# MSH_M8

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
include/: IMSHMenuManager.h  MSH_M8.h  MenuAction.h
src/: MSHMenuManager.cpp  MSHMenuManager.h  MSH_M8.cpp
src/Helpers/: InputHandler.cpp  InputHandler.h  MenuDisplayer.cpp  MenuDisplayer.h
src/MenuActions/: AboutAction.cpp  AboutAction.h  AddDeviceAction.cpp  AddDeviceAction.h  ChangeModeAction.cpp  ChangeModeAction.h  ChangeStateAction.cpp  ChangeStateAction.h  GetHomeStatusAction.cpp  GetHomeStatusAction.h  ManualAction.cpp  ManualAction.h  MenuAction.h  PoweroffDeviceAction.cpp  PoweroffDeviceAction.h  PoweronDeviceAction.cpp  PoweronDeviceAction.h  RemoveDeviceAction.cpp  RemoveDeviceAction.h  ShutdownAction.cpp  ShutdownAction.h
src/Simulations/: Simulation1.cpp  Simulation1.h  Simulation2.cpp  Simulation2.h  Simulation3.cpp  Simulation3.h
